--- a/connector/test_talk/docker-compose.app.yml
+++ b/connector/test_talk/docker-compose.app.yml
@@ -1,8 +1,8 @@
-version: "3.1"
+version: '3.1'
 
 services:
   producer:
-    build: ./producer
+    build: ./connector
     environment:
       KAFKA_BROKER_ADRES: kafka-broker:9092
 
