updated connector to new design

--- a/connector/Dockerfile
+++ b/connector/Dockerfile
@@ -2,10 +2,11 @@ FROM python:3.8
 
 WORKDIR /usr/connector
 
-ADD ./connector/requirements.txt ./
-RUN pip install -r requirements.txt
 ADD ./connector/ ./
-ADD ./transport/topics.py ./
+RUN pip install -r requirements.txt
 ADD ./transport/messages_types_python/ ./
+ADD ./transport/topics.py ./transport/topics.py
+# ADD ./transport/messages_types_python ./transport/messages_types_python
 
-CMD ["python3", "__main__.py"]
+# CMD ["python3", "__main__.py"]
+CMD ["python3", "-u", "__main__.py"]
